<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_margin="5dp"
    android:id="@+id/grpbutton"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/adam"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/my_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_40_00"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintStart_toStartOf="@+id/owner"
            app:layout_constraintTop_toBottomOf="@+id/owner" />

        <TextView
            android:id="@+id/Reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent"
            android:padding="10dp"
            android:textColor="#03DA9D"
            android:background="@drawable/reason_rounded"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/my_share"
            app:layout_constraintTop_toBottomOf="@+id/my_share" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/a_moment_ago"
            android:textColor="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/Reason" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>