<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="#272727"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mehul_sirvi"
            android:textColor="@color/LightGreen"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sony_beauty_parlor"
            android:textColor="@color/white"
            android:layout_marginEnd="150dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/Person_name"
            app:layout_constraintTop_toBottomOf="@+id/Person_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:layout_marginTop="4dp"
            android:background="#1F1D20"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reason">


            <TextView
                android:id="@+id/total_bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/total_bill"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/total_bill_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₹40.00"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/total_bill"
                app:layout_constraintTop_toBottomOf="@+id/total_bill"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/your_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_share"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/total_bill_money"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/total_bill"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/your_share_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₹40.00"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/your_share"
                app:layout_constraintTop_toBottomOf="@+id/your_share"
                tools:ignore="SmallSp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>